# cognee-integrations

./: .gitignore  CHANGELOG.md  ENV_VARS.md  README.md  RELEASING.md  pyproject.toml
integrations/aider/: .env.example  README.md  pyproject.toml
integrations/aider/cognee_integration_aider/: __init__.py  aider_adapter.py  cli.py  config.py  doctor.py  session.py  tools.py
integrations/aider/examples/: aider_memory_demo.py  aider_with_memory.py  basic_memory_flow.py
integrations/aider/tests/: test_client.py  test_config_precedence.py  test_doctor.py  test_recall.py  test_remember.py  test_session_id.py  test_session_scope.py  test_smoke.py  test_tool_payloads.py  test_tools.py
integrations/chat-memory/: .env.example  README.md  pyproject.toml
integrations/chat-memory/cognee_integration_chat_memory/: __init__.py  adapter.py  backend.py
integrations/chat-memory/examples/: console_bot.py
integrations/chat-memory/tests/: test_adapter.py  test_cognee_backend.py  test_http_backend.py  test_sanitizer_and_scoping.py
integrations/claude-code/: CHANGELOG.md  EVENTS.md  README.md  RELEASING.md  TROUBLESHOOTING.md  pyproject.toml
integrations/claude-code/agents/: cognee-recall.md
integrations/claude-code/hooks/: hooks.json
integrations/claude-code/scripts/: EVENTS.md  _cognee_client.py  _events.py  _plugin_common.py  _proc.py  _recall_http.py  _remember_http.py  cognee-doctor.py  cognee-doctor.sh  cognee-plugin  cognee-remember.sh  cognee-search.sh  cognee-status.py  cognee-statusline.sh  cognee_plugin.py  cognee_status.py  cognee_statusline_render.py  config.py  dataset-switch.py  doctor.py  event_names.py  exit-watcher.py  idle-watcher.py  pre-compact.py  session-context-lookup.py  session-start.py  setup-statusline.py  smoke-install.sh  status.py  store-to-session.py  store-user-prompt.py  sync-session-to-graph.py  telemetry.py  version_check.py
integrations/claude-code/tests/: _smoke_support.py  test_agent_register_e2e.py  test_bridge_poll.py  test_claude_code_config_precedence.py  test_claude_dataset_name.py  test_cognee_client.py  test_cognify_poll.py  test_coldstart_retry.py  test_companion_dataset.py  test_config_precedence.py  test_dataset_name.py  test_dataset_switch.py  test_dim_mismatch.py  test_dimension_mismatch.py  test_doctor.py  test_elapsed_ms.py  test_event_names.py  test_events.py  test_hook_timing.py  test_improve_sync.py  test_install_extras.py  test_integration_smoke.py  test_localhost_auth.py  test_log_rotation.py  test_metrics.py  test_mid_session_reregister.py  test_pending_capture.py  test_per_scope_timing.py  test_proc.py  test_recall_http.py  test_remember_http.py  test_server_env.py  test_server_healer.py  test_session_id.py  test_session_id_conformance.py  test_session_picker.py  test_status.py  test_statusline.py  test_statusline_config.py  test_statusline_no_clobber.py  (+10 more)
integrations/dify/: .difyignore  .gitignore  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml
integrations/dify-sdk/: .difyignore  .env.example  .gitignore  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
integrations/dify-sdk/docker/: .env.example  docker-compose.yml
integrations/dify-sdk/provider/: cognee_sdk.py  cognee_sdk.yaml
integrations/dify-sdk/tests/: test_smoke.py
integrations/dify-sdk/tools/: add_data.py  add_data.yaml  cognify.py  cognify.yaml  delete_data.py  delete_data.yaml  delete_dataset.py  delete_dataset.yaml  search.py  search.yaml  update_data.py  update_data.yaml
integrations/dify/examples/: README.md
integrations/dify/provider/: cognee.py  cognee.yaml
integrations/dify/tools/: add_data.py  add_data.yaml  add_file.py  add_file.yaml  cognify.py  cognify.yaml  create_dataset.py  create_dataset.yaml  delete_data.py  delete_data.yaml  delete_dataset.py  delete_dataset.yaml  get_dataset_data.py  get_dataset_data.yaml  get_datasets.py  get_datasets.yaml  search.py  search.yaml
integrations/discord/: README.md  pyproject.toml
integrations/discord/cognee_integration_discord/: __init__.py  __main__.py  adapter.py  bot.py  config.py  mapping.py  service.py
integrations/discord/tests/: conftest.py  test_http_adapter.py  test_mapping.py  test_service.py
integrations/hermes-agent/: README.md  TROUBLESHOOTING.md  __init__.py  after-install.md  cli.py  plugin.yaml  pyproject.toml
integrations/hermes-agent/cognee_integration_hermes/: cli.py  config.py  provider.py
integrations/hermes-agent/tests/: test_config_precedence.py  test_dataset_name.py  test_dim_mismatch.py  test_dimension_mismatch.py  test_session_id_conformance.py  test_smoke.py
integrations/second-brain/: .env.example  README.md  pyproject.toml
integrations/second-brain/cognee_integration_second_brain/: __init__.py  __main__.py  cognee_adapter.py  commands.py  config.py  consent.py  fake_adapter.py  http_client.py  identity.py  interface.py  router.py  run.py  telegram_transport.py  web_transport.py
integrations/second-brain/tests/: conftest.py  test_citation_guard.py  test_cognee_adapter.py  test_http_client.py
integrations/slack/: .env.example  README.md  pyproject.toml
integrations/slack/cognee_integration_slack/: cognee_memory.py  http_client.py  memory_adapter.py
integrations/slack/tests/: test_citations.py  test_cognee_memory.py  test_http_client.py  test_ingestion_buffer.py  test_memory_adapter_contract.py  test_slack_commands.py  test_slack_handlers.py
integrations/telegram/: .env.example  README.md  pyproject.toml
integrations/telegram/cognee_integration_telegram/: __init__.py  __main__.py  adapter.py  bot.py  config.py  http_client.py
integrations/telegram/tests/: conftest.py  test_adapter.py  test_bot.py  test_citations.py  test_config.py  test_http_client.py  test_scoping.py
integrations/vellum/: .env.example  .gitignore  README.md  pyproject.toml
integrations/vellum/cognee_integration_vellum/: __init__.py  bootstrap.py  client.py  nodes.py  tools.py
integrations/vellum/examples/: __init__.py  run_support_assistant.py  (+1 more)
integrations/web-widget/: .env.example  .gitignore  README.md  pyproject.toml
(+324 files in other folders)
