[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognee-integration-aider"
version = "0.1.0"
description = "Sessionized Cognee graph memory for the Aider CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cognee>=0.4.0,<2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/topoteretes/cognee-integrations/tree/main/integrations/aider"
Repository = "https://github.com/topoteretes/cognee-integrations"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognee_integration_aider*"]
exclude = ["examples*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]
