[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognee-integration-chat-memory"
version = "0.1.0"
description = "Shared chat-memory adapter core for cognee-powered bots (Slack, Telegram, Discord, a personal second brain)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cognee team" }]
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
# In-process cognee SDK backend (CogneeMemoryBackend). The default HTTP backend
# needs none of this — it talks to a running cognee server.
sdk = ["cognee>=1.3.0,<1.4.0"]

[project.urls]
Homepage = "https://github.com/topoteretes/cognee-integrations/tree/main/integrations/chat-memory"
Repository = "https://github.com/topoteretes/cognee-integrations"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognee_integration_chat_memory*"]
exclude = ["examples*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.6",
]
