[project]
name = "cognee-dify-sdk-plugin"
version = "0.0.1"
description = "Cognee SDK tool plugin for Dify – add data, cognify, search, and delete via a self-hosted Cognee server"
requires-python = ">=3.12"
dependencies = [
    "dify_plugin>=0.4.0,<0.7.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
