[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognee-integration-discord"
version = "0.1.0"
description = "Cognee-backed memory for Discord servers (per-guild/per-channel isolation)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Cognee team"}
]
dependencies = [
    "discord.py>=2.3,<3",
    "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cognee_integration_discord*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.6",
]
