[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognee-integration-vellum"
version = "0.1.0"
description = "Cognee-backed memory nodes and Agent Node tools for Vellum Workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cognee team" }]
dependencies = [
    "cognee>=1.2.2,<1.3.0",
    "vellum-ai>=1.0",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/topoteretes/cognee-integrations/tree/main/integrations/vellum"
Repository = "https://github.com/topoteretes/cognee-integrations"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognee_integration_vellum*"]
exclude = ["examples*", "tests*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.6",
]
